apps/base/nginx/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.minikube.cluster`)
      kind: Rule
      services:
        - name: nginx
          port: 80
